# Integration_with_external_service

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api_hh.py  main.py  save_in_file.py  vacation.py
tests/: conftest.py  test_api_hh.py  test_save_in_file.py  test_vacation.py
