[tool.poetry]
name = "integration-with-external-service"
version = "0.1.0"
description = ""
authors = ["Kristina Rozhkova <kristina.rozhkova.2018@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[flake8]
#max-line-length = 119
#ignore = E203, W503
#exclude = .git, __pycache__, venv, .venv

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119
